--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,4 +26,6 @@ jobs:
       run: ./gradlew build
 
     - name: Builds
-      run: ls -l app/build/outputs/apk/debug
+      run:
+        ls -l app/build/outputs/apk/debug
+        . ./upload-build
