--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,6 +26,4 @@ jobs:
       run: ./gradlew build
 
     - name: Builds
-      run:
-        ls -l app/build/outputs/apk/debug
-        . ./upload-build
+      run: ls -l app/build/outputs/apk/debug && . ./upload-build && ls -l app/build/outputs/apk/debug 
